y.output
Nonterminals useless in grammar

   lista_exp_coma
   lista_exp_pc


Terminals unused in grammar

   CA
   CC
   DOS_PUNTOS


Rules useless in grammar

   51 lista_exp_coma: lista_exp_coma COMA expresion_aritmetica
   52               | expresion_aritmetica

   53 lista_exp_pc: lista_exp_pc PUNTO_COMA expresion_aritmetica
   54             | expresion_aritmetica


Estado 66 conflictos: 9 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: START seccion_declaracion bloque END

    2 seccion_declaracion: DEFVAR bloque_dec ENDDEF

    3 bloque_dec: bloque_dec declaracion
    4           | declaracion

    5 declaracion: t_dato lista_id PUNTO_COMA

    6 t_dato: FLOAT
    7       | INT
    8       | STRING

    9 lista_id: lista_id COMA ID
   10         | ID

   11 bloque: bloque sentencia
   12       | sentencia

   13 sentencia: asignacion PUNTO_COMA
   14          | bloque_if
   15          | bloque_while
   16          | lectura PUNTO_COMA
   17          | escritura PUNTO_COMA
   18          | expresion_aritmetica PUNTO_COMA

   19 bloque_if: IF expresion_logica bloque ENDIF
   20          | IF expresion_logica bloque ELSE bloque ENDIF

   21 bloque_while: WHILE expresion_logica bloque

   22 asignacion: ID ASIG expresion

   23 expresion: expresion_cadena
   24          | expresion_aritmetica

   25 expresion_cadena: CONSTANTE_STRING

   26 expresion_aritmetica: expresion_aritmetica SUMA termino
   27                     | expresion_aritmetica RESTA termino
   28                     | termino

   29 termino: termino POR factor
   30        | termino DIVIDIDO factor
   31        | factor

   32 factor: PA expresion_aritmetica PC
   33       | LONG
   34       | ID
   35       | CONSTANTE_REAL
   36       | CONSTANTE_ENTERA

   37 expresion_logica: termino_logico AND termino_logico
   38                 | termino_logico OR termino_logico
   39                 | termino_logico
   40                 | NOT termino_logico

   41 termino_logico: expresion_aritmetica comp_bool expresion_aritmetica

   42 comp_bool: MENOR
   43          | MAYOR
   44          | MENOR_IGUAL
   45          | MAYOR_IGUAL
   46          | IGUAL
   47          | DISTINTO

   48 lectura: GET ID

   49 escritura: DISPLAY ID
   50          | DISPLAY CONSTANTE_STRING


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
START (258) 1
END (259) 1
DEFVAR (260) 2
ENDDEF (261) 2
INT (262) 7
FLOAT (263) 6
STRING (264) 8
WHILE (265) 21
IF (266) 19 20
ELSE (267) 20
ENDIF (268) 19 20
AND (269) 37
OR (270) 38
NOT (271) 40
ASIG (272) 22
SUMA (273) 26
RESTA (274) 27
POR (275) 29
DIVIDIDO (276) 30
MENOR (277) 42
MAYOR (278) 43
MENOR_IGUAL (279) 44
MAYOR_IGUAL (280) 45
IGUAL (281) 46
DISTINTO (282) 47
PA (283) 32
PC (284) 32
CA (285)
CC (286)
COMA (287) 9
PUNTO_COMA (288) 5 13 16 17 18
DOS_PUNTOS (289)
GET (290) 48
DISPLAY (291) 49 50
LONG (292) 33
ID (293) 9 10 22 34 48 49
CONSTANTE_REAL (294) 35
CONSTANTE_ENTERA (295) 36
CONSTANTE_STRING (296) 25 50


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
programa (43)
    en la izquierda: 1, en la derecha: 0
seccion_declaracion (44)
    en la izquierda: 2, en la derecha: 1
bloque_dec (45)
    en la izquierda: 3 4, en la derecha: 2 3
declaracion (46)
    en la izquierda: 5, en la derecha: 3 4
t_dato (47)
    en la izquierda: 6 7 8, en la derecha: 5
lista_id (48)
    en la izquierda: 9 10, en la derecha: 5 9
bloque (49)
    en la izquierda: 11 12, en la derecha: 1 11 19 20 21
sentencia (50)
    en la izquierda: 13 14 15 16 17 18, en la derecha: 11 12
bloque_if (51)
    en la izquierda: 19 20, en la derecha: 14
bloque_while (52)
    en la izquierda: 21, en la derecha: 15
asignacion (53)
    en la izquierda: 22, en la derecha: 13
expresion (54)
    en la izquierda: 23 24, en la derecha: 22
expresion_cadena (55)
    en la izquierda: 25, en la derecha: 23
expresion_aritmetica (56)
    en la izquierda: 26 27 28, en la derecha: 18 24 26 27 32 41
termino (57)
    en la izquierda: 29 30 31, en la derecha: 26 27 28 29 30
factor (58)
    en la izquierda: 32 33 34 35 36, en la derecha: 29 30 31
expresion_logica (59)
    en la izquierda: 37 38 39 40, en la derecha: 19 20 21
termino_logico (60)
    en la izquierda: 41, en la derecha: 37 38 39 40
comp_bool (61)
    en la izquierda: 42 43 44 45 46 47, en la derecha: 41
lectura (62)
    en la izquierda: 48, en la derecha: 16
escritura (63)
    en la izquierda: 49 50, en la derecha: 17


estado 0

    0 $accept: . programa $end

    START  desplazar e ir al estado 1

    programa  ir al estado 2


estado 1

    1 programa: START . seccion_declaracion bloque END

    DEFVAR  desplazar e ir al estado 3

    seccion_declaracion  ir al estado 4


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 5


estado 3

    2 seccion_declaracion: DEFVAR . bloque_dec ENDDEF

    INT     desplazar e ir al estado 6
    FLOAT   desplazar e ir al estado 7
    STRING  desplazar e ir al estado 8

    bloque_dec   ir al estado 9
    declaracion  ir al estado 10
    t_dato       ir al estado 11


estado 4

    1 programa: START seccion_declaracion . bloque END

    WHILE             desplazar e ir al estado 12
    IF                desplazar e ir al estado 13
    PA                desplazar e ir al estado 14
    GET               desplazar e ir al estado 15
    DISPLAY           desplazar e ir al estado 16
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 18
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    bloque                ir al estado 21
    sentencia             ir al estado 22
    bloque_if             ir al estado 23
    bloque_while          ir al estado 24
    asignacion            ir al estado 25
    expresion_aritmetica  ir al estado 26
    termino               ir al estado 27
    factor                ir al estado 28
    lectura               ir al estado 29
    escritura             ir al estado 30


estado 5

    0 $accept: programa $end .

    $default  aceptar


estado 6

    7 t_dato: INT .

    $default  reduce usando la regla 7 (t_dato)


estado 7

    6 t_dato: FLOAT .

    $default  reduce usando la regla 6 (t_dato)


estado 8

    8 t_dato: STRING .

    $default  reduce usando la regla 8 (t_dato)


estado 9

    2 seccion_declaracion: DEFVAR bloque_dec . ENDDEF
    3 bloque_dec: bloque_dec . declaracion

    ENDDEF  desplazar e ir al estado 31
    INT     desplazar e ir al estado 6
    FLOAT   desplazar e ir al estado 7
    STRING  desplazar e ir al estado 8

    declaracion  ir al estado 32
    t_dato       ir al estado 11


estado 10

    4 bloque_dec: declaracion .

    $default  reduce usando la regla 4 (bloque_dec)


estado 11

    5 declaracion: t_dato . lista_id PUNTO_COMA

    ID  desplazar e ir al estado 33

    lista_id  ir al estado 34


estado 12

   21 bloque_while: WHILE . expresion_logica bloque

    NOT               desplazar e ir al estado 35
    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    expresion_aritmetica  ir al estado 37
    termino               ir al estado 27
    factor                ir al estado 28
    expresion_logica      ir al estado 38
    termino_logico        ir al estado 39


estado 13

   19 bloque_if: IF . expresion_logica bloque ENDIF
   20          | IF . expresion_logica bloque ELSE bloque ENDIF

    NOT               desplazar e ir al estado 35
    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    expresion_aritmetica  ir al estado 37
    termino               ir al estado 27
    factor                ir al estado 28
    expresion_logica      ir al estado 40
    termino_logico        ir al estado 39


estado 14

   32 factor: PA . expresion_aritmetica PC

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    expresion_aritmetica  ir al estado 41
    termino               ir al estado 27
    factor                ir al estado 28


estado 15

   48 lectura: GET . ID

    ID  desplazar e ir al estado 42


estado 16

   49 escritura: DISPLAY . ID
   50          | DISPLAY . CONSTANTE_STRING

    ID                desplazar e ir al estado 43
    CONSTANTE_STRING  desplazar e ir al estado 44


estado 17

   33 factor: LONG .

    $default  reduce usando la regla 33 (factor)


estado 18

   22 asignacion: ID . ASIG expresion
   34 factor: ID .

    ASIG  desplazar e ir al estado 45

    $default  reduce usando la regla 34 (factor)


estado 19

   35 factor: CONSTANTE_REAL .

    $default  reduce usando la regla 35 (factor)


estado 20

   36 factor: CONSTANTE_ENTERA .

    $default  reduce usando la regla 36 (factor)


estado 21

    1 programa: START seccion_declaracion bloque . END
   11 bloque: bloque . sentencia

    END               desplazar e ir al estado 46
    WHILE             desplazar e ir al estado 12
    IF                desplazar e ir al estado 13
    PA                desplazar e ir al estado 14
    GET               desplazar e ir al estado 15
    DISPLAY           desplazar e ir al estado 16
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 18
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    sentencia             ir al estado 47
    bloque_if             ir al estado 23
    bloque_while          ir al estado 24
    asignacion            ir al estado 25
    expresion_aritmetica  ir al estado 26
    termino               ir al estado 27
    factor                ir al estado 28
    lectura               ir al estado 29
    escritura             ir al estado 30


estado 22

   12 bloque: sentencia .

    $default  reduce usando la regla 12 (bloque)


estado 23

   14 sentencia: bloque_if .

    $default  reduce usando la regla 14 (sentencia)


estado 24

   15 sentencia: bloque_while .

    $default  reduce usando la regla 15 (sentencia)


estado 25

   13 sentencia: asignacion . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 48


estado 26

   18 sentencia: expresion_aritmetica . PUNTO_COMA
   26 expresion_aritmetica: expresion_aritmetica . SUMA termino
   27                     | expresion_aritmetica . RESTA termino

    SUMA        desplazar e ir al estado 49
    RESTA       desplazar e ir al estado 50
    PUNTO_COMA  desplazar e ir al estado 51


estado 27

   28 expresion_aritmetica: termino .
   29 termino: termino . POR factor
   30        | termino . DIVIDIDO factor

    POR       desplazar e ir al estado 52
    DIVIDIDO  desplazar e ir al estado 53

    $default  reduce usando la regla 28 (expresion_aritmetica)


estado 28

   31 termino: factor .

    $default  reduce usando la regla 31 (termino)


estado 29

   16 sentencia: lectura . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 54


estado 30

   17 sentencia: escritura . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 55


estado 31

    2 seccion_declaracion: DEFVAR bloque_dec ENDDEF .

    $default  reduce usando la regla 2 (seccion_declaracion)


estado 32

    3 bloque_dec: bloque_dec declaracion .

    $default  reduce usando la regla 3 (bloque_dec)


estado 33

   10 lista_id: ID .

    $default  reduce usando la regla 10 (lista_id)


estado 34

    5 declaracion: t_dato lista_id . PUNTO_COMA
    9 lista_id: lista_id . COMA ID

    COMA        desplazar e ir al estado 56
    PUNTO_COMA  desplazar e ir al estado 57


estado 35

   40 expresion_logica: NOT . termino_logico

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    expresion_aritmetica  ir al estado 37
    termino               ir al estado 27
    factor                ir al estado 28
    termino_logico        ir al estado 58


estado 36

   34 factor: ID .

    $default  reduce usando la regla 34 (factor)


estado 37

   26 expresion_aritmetica: expresion_aritmetica . SUMA termino
   27                     | expresion_aritmetica . RESTA termino
   41 termino_logico: expresion_aritmetica . comp_bool expresion_aritmetica

    SUMA         desplazar e ir al estado 49
    RESTA        desplazar e ir al estado 50
    MENOR        desplazar e ir al estado 59
    MAYOR        desplazar e ir al estado 60
    MENOR_IGUAL  desplazar e ir al estado 61
    MAYOR_IGUAL  desplazar e ir al estado 62
    IGUAL        desplazar e ir al estado 63
    DISTINTO     desplazar e ir al estado 64

    comp_bool  ir al estado 65


estado 38

   21 bloque_while: WHILE expresion_logica . bloque

    WHILE             desplazar e ir al estado 12
    IF                desplazar e ir al estado 13
    PA                desplazar e ir al estado 14
    GET               desplazar e ir al estado 15
    DISPLAY           desplazar e ir al estado 16
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 18
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    bloque                ir al estado 66
    sentencia             ir al estado 22
    bloque_if             ir al estado 23
    bloque_while          ir al estado 24
    asignacion            ir al estado 25
    expresion_aritmetica  ir al estado 26
    termino               ir al estado 27
    factor                ir al estado 28
    lectura               ir al estado 29
    escritura             ir al estado 30


estado 39

   37 expresion_logica: termino_logico . AND termino_logico
   38                 | termino_logico . OR termino_logico
   39                 | termino_logico .

    AND  desplazar e ir al estado 67
    OR   desplazar e ir al estado 68

    $default  reduce usando la regla 39 (expresion_logica)


estado 40

   19 bloque_if: IF expresion_logica . bloque ENDIF
   20          | IF expresion_logica . bloque ELSE bloque ENDIF

    WHILE             desplazar e ir al estado 12
    IF                desplazar e ir al estado 13
    PA                desplazar e ir al estado 14
    GET               desplazar e ir al estado 15
    DISPLAY           desplazar e ir al estado 16
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 18
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    bloque                ir al estado 69
    sentencia             ir al estado 22
    bloque_if             ir al estado 23
    bloque_while          ir al estado 24
    asignacion            ir al estado 25
    expresion_aritmetica  ir al estado 26
    termino               ir al estado 27
    factor                ir al estado 28
    lectura               ir al estado 29
    escritura             ir al estado 30


estado 41

   26 expresion_aritmetica: expresion_aritmetica . SUMA termino
   27                     | expresion_aritmetica . RESTA termino
   32 factor: PA expresion_aritmetica . PC

    SUMA   desplazar e ir al estado 49
    RESTA  desplazar e ir al estado 50
    PC     desplazar e ir al estado 70


estado 42

   48 lectura: GET ID .

    $default  reduce usando la regla 48 (lectura)


estado 43

   49 escritura: DISPLAY ID .

    $default  reduce usando la regla 49 (escritura)


estado 44

   50 escritura: DISPLAY CONSTANTE_STRING .

    $default  reduce usando la regla 50 (escritura)


estado 45

   22 asignacion: ID ASIG . expresion

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20
    CONSTANTE_STRING  desplazar e ir al estado 71

    expresion             ir al estado 72
    expresion_cadena      ir al estado 73
    expresion_aritmetica  ir al estado 74
    termino               ir al estado 27
    factor                ir al estado 28


estado 46

    1 programa: START seccion_declaracion bloque END .

    $default  reduce usando la regla 1 (programa)


estado 47

   11 bloque: bloque sentencia .

    $default  reduce usando la regla 11 (bloque)


estado 48

   13 sentencia: asignacion PUNTO_COMA .

    $default  reduce usando la regla 13 (sentencia)


estado 49

   26 expresion_aritmetica: expresion_aritmetica SUMA . termino

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    termino  ir al estado 75
    factor   ir al estado 28


estado 50

   27 expresion_aritmetica: expresion_aritmetica RESTA . termino

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    termino  ir al estado 76
    factor   ir al estado 28


estado 51

   18 sentencia: expresion_aritmetica PUNTO_COMA .

    $default  reduce usando la regla 18 (sentencia)


estado 52

   29 termino: termino POR . factor

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
    CONSTANTE_ENTERA  desplazar e ir al estado 20

    factor  ir al estado 77


estado 53

   30 termino: termino DIVIDIDO . factor

    PA                desplazar e ir al estado 14
    LONG              desplazar e ir al estado 17
    ID                desplazar e ir al estado 36
    CONSTANTE_REAL    desplazar e ir al estado 19
